Fixed tile overflow based on digits length

--- a/src/Board.css
+++ b/src/Board.css
@@ -70,10 +70,10 @@ span {
 }
 
 .finished-buttons-row button {
-    margin-left: 0;
+    align-items: center;
     height: 45px;
     width: fit-content;
-    padding: 10px;
+    text-align: center;
     border: none;
     border-radius: 4px;
     color: #F9F6F1;
